--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "author": "Minded Security",
   "license": "ISC",
   "dependencies": {
+    "browserify": "^16.2.3",
+    "cross-spawn": "^6.0.5",
+    "uglify-js": "^3.6.0"
   }
 }
