--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "tests"
   },
   "scripts": {
+    "lint": "eslint '**/*.js'",
+    "lint:fix": "npm run lint -- --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +20,8 @@
   "dependencies": {
     "browserify": "^16.2.3",
     "cross-spawn": "^6.0.5",
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.13.0",
     "uglify-js": "^3.6.0"
   }
 }
