--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
         "object-curly-spacing": ["error", "always"],
         "require-jsdoc": "off",
         "indent": ["error", 4],
-        "max-len": ["error", 120]
+        "max-len": ["error", 120],
+        "no-unused-vars": ["error", { "varsIgnorePattern": "sshlackInjector" }]
     }
 }
